fix header overflow

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -41,6 +41,8 @@ header p a {
   justify-content: space-between;
   text-decoration: none;
   padding: 0;
+  flex-wrap: wrap;
+  max-width: 100vw;
 }
 
 .navbar li {
